--- a/style.css
+++ b/style.css
@@ -1,245 +1,252 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Protest+Riot&family=Roboto+Slab:wght@100..900&family=Smooch+Sans:wght@100..900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap');
 
-@import url('https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap'); 
 * {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font-family: "Oswald", sans-serif;
-}
-html {
-    scroll-behavior: smooth;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: "Oswald", sans-serif;
 }
 
 body {
-    background: #ffffff;
+  background: #ffffff;
+}
+
+html {
+  scroll-behavior: smooth;
+  scrollbar-color: blue;
 }
 
 #header {
-    width: 100%;
-    height: 100vh;
+  width: 100%;
+  height: 100vh;
 }
 
 .container {
-    padding: 10px 5%;
+  padding: 10px 5%;
 }
 
 nav {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    height: 60px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 60px;
 }
 
 nav h1 {
-    width: 140px;
-    letter-spacing: 1.5px;
-    font-size: 35px;
-    cursor: pointer;
+  width: 140px;
+  letter-spacing: 1.5px;
+  font-size: 35px;
+  cursor: pointer;
 }
 
 nav h1 span {
-    color: #ff004f;
+  color: #ff004f;
 }
 
 nav ul li {
-    display: inline-block;
-    list-style: none;
-    margin: 10px 20px;
+  display: inline-block;
+  list-style: none;
+  margin: 10px 20px;
 }
 
 nav ul li a {
-    color: #000000;
-    text-decoration: none;
-    font-size: 18px;
-    position: relative;
+  color: #000000;
+  text-decoration: none;
+  font-size: 18px;
+  position: relative;
 }
 
 nav ul li a::after {
-    content: '';
-    width: 0;
-    height: 3px;
-    background: #ff004f;
-    position: absolute;
-    left: 0;
-    bottom: -6px;
-    transition: 0.5s;
+  content: '';
+  width: 0;
+  height: 3px;
+  background: #ff004f;
+  position: absolute;
+  left: 0;
+  bottom: -6px;
+  transition: 0.5s;
 }
 
 nav ul li a:hover::after {
-    width: 100%;
+  width: 100%;
 }
 
 form {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    margin-top: 50px;
-    margin-bottom: 40px;
-    position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 50px;
+  margin-bottom: 40px;
+  position: relative;
 }
 
 input {
-    width: 300px;
-    height: 38px;
-    padding: 10px;
-    border: 1.5px solid black;
-    border-radius: 20px;
+  width: 300px;
+  height: 38px;
+  padding: 10px;
+  border: 1.5px solid black;
+  border-radius: 20px;
 }
 
 .search {
-    position: relative;
+  position: relative;
 }
 
 .search button {
-    height: 34px;
-    width: 34px;
-    padding: 0 10px;
-    margin-left: 7px;
-    cursor: pointer;
-    border: none;
-    border-radius: 50%;
-    position: absolute;
-    left: 85.5%;
-    top: 2px;
+  height: 34px;
+  width: 34px;
+  padding: 0 10px;
+  margin-left: 7px;
+  cursor: pointer;
+  border: none;
+  border-radius: 50%;
+  position: absolute;
+  left: 85.5%;
+  top: 2px;
 }
 
 form button {
-    height: 35px;
-    padding: 0 10px;
-    margin-left: 10px;
-    cursor: pointer;
-    border: 1px solid black;
-    border-radius: 50%;
+  height: 35px;
+  padding: 0 10px;
+  margin-left: 10px;
+  cursor: pointer;
+  border: 1px solid black;
+  border-radius: 50%;
 }
 
 button:hover {
-    background: #ff004f;
+  background: #ff004f;
 }
 
 #header img {
-    width: 100%;
-    height: 90vh;
+  width: 100%;
+  height: 90vh;
 }
 
 .details {
-    font-size: 90px;
-    position: absolute;
-    left: 60%;
-    top: 20%;
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: italic;
+  font-size: 120px;
+  position: absolute;
+  left: 60%;
+  line-height: 110px;
+  font-family: "Smooch Sans", sans-serif;
+  font-weight: 400;
+  font-style: italic;
+  margin-top: 50px;
 }
-.details span{
-    color: #ff004f;
-    margin-left: 23%;
-    font-size: 85px;
-    font-family: "Libre Baskerville", serif;
+
+.details span {
+  color: #ff004f;
+  margin-left: 23%;
+  font-size: 120px;
+  font-family: "Smooch Sans", sans-serif;
 }
-.detailed{
-    margin-top: -30px;
-    font-size: 22px;
-    position: absolute;
-    left: 60%;
-    top: 52%;
-    font-family: "Libre Baskerville", serif;
-    font-weight: 400;
-    font-style: italic;
+
+.detailed {
+  margin-top: -30px;
+  font-size: 22px;
+  position: absolute;
+  left: 60%;
+  top: 52%;
+  font-family: "poppins", serif;
+  font-weight: 400;
+  font-style: italic;
 }
-.last{
-    position: absolute;
-    left: 76%;
-    top: 63%;
-    font-size: 20px;
-    border: 1px solid black;
-    border-radius: 50px;
-    padding: 10px;
-    cursor: pointer;
+
+#new-featured {
+  margin-top: 20px;
 }
-#new-featured{
-    margin-top: 20px;
+
+#new-featured h1 {
+  font-size: 50px;
+  margin-top: 20px;
 }
-#new-featured h1{
-    font-size: 50px;
-    margin-top: 20px;
+
+.product {
+  display: grid;
+  grid-template-columns: auto auto auto auto;
+  grid-gap: 20px;
+  padding: 10px;
+  margin-top: 50px;
 }
-.product{
-    display: grid;
-    grid-template-columns: auto auto auto auto;
-    grid-gap: 20px;
-    padding: 10px;
-    margin-top: 50px;
+
+.list {
+  border-radius: 10px;
+  position: relative;
+  overflow: hidden;
+  transition: scale 0.5s;
+  cursor: pointer;
 }
-.list{
-    border-radius: 10px;
-    position: relative;
-    overflow: hidden;
-    transition: scale 0.5s;
-    cursor: pointer;
+
+.list:hover {
+  scale: 1.1;
 }
-.list:hover{
-    scale: 1.1;
+
+.list img {
+  width: 100%;
+  border-radius: 10px;
+  display: block;
 }
-.list img{
-    width: 100%;
-    border-radius: 10px;
-    display: block;
+
+.layer {
+  width: 100%;
+  height: 0;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), #ffffff);
+  border-radius: 10px;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  overflow: hidden;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  padding: 0 40px;
+  text-align: center;
+  font-size: 18px;
+  transition: height 0.5s;
 }
-.layer{
-    width: 100%;
-    height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #ffffff);
-    border-radius: 10px;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    overflow: hidden;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    padding: 0 40px;
-    text-align: center;
-    font-size: 18px;
-    transition: height 0.5s;
-}
+
 .layer h3 {
-    font-weight: 500;
-    margin-bottom: 20px;
-    color: #ffffff;
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #ffffff;
 
 }
-.layer p{
-    font-weight: 500;
-    margin-bottom: 20px;
-    color: #000000;
+
+.layer p {
+  font-weight: 500;
+  margin-bottom: 20px;
+  color: #000000;
 }
+
 .list:hover .layer {
-    height: 100%;
+  height: 100%;
 }
+
 .copyright {
-    width: 100%;
-    text-align: center;
-    padding: 25px 0;
-    background: #888888;
-    font-weight: 300;
-    font-size: 16px;
-    margin-top: 40px;
+  width: 100%;
+  text-align: center;
+  padding: 25px 0;
+  background: #888888;
+  font-weight: 300;
+  font-size: 16px;
+  margin-top: 40px;
 }
 
 .copyright i {
-    color: #ff004f;
+  color: #ff004f;
 }
+
 /* ------------------------------product-page---------------------------- */
 
 
-#productPage{
-    /* display: none; */
+#productPage {
+  display: none;
 }
 
-.contain{
+.contain {
   width: 100%;
   min-height: 100vh;
   background: whitesmoke;
@@ -281,6 +288,7 @@ button:hover {
   border-radius: 50%;
   background: rgba(255, 255, 255, 0.5);
   margin: 10px;
+  border: 1px solid black;
   cursor: pointer;
 }
 
@@ -307,43 +315,46 @@ button:hover {
   color: black;
   font-size: 30px;
   font-weight: 600;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 .detail h3 {
   color: #00d874;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 #para {
-  font-size: 15px;
+  font-size: 17px;
+  width: 350px;
+  font-family: 'poppins', sans-serif;
   font-weight: 400;
   line-height: 1.5;
-  margin-bottom: 10px; 
+  margin-bottom: 10px;
 }
 
 #select {
+  display: block;
+  align-items: center;
   font-size: 15px;
-  font-weight: 400;
-  margin-top: 20px; 
+  font-weight: 600;
+  margin-top: 10px;
 }
 
 .size-select,
-.color-select,
 .quantity-select {
   display: flex;
   align-items: center;
-  margin-top: 10px; 
+  margin-top: 10px;
 }
 
 .size-select #para,
 .quantity-select #para {
   width: 70px;
-  margin-top: 0;
+  margin-top: 10px;
   margin-right: 10px;
 }
 
-.size-select input:checked + span {
+.size-select input:checked+span {
   color: blue;
   font-weight: 600;
 }
@@ -354,13 +365,11 @@ button:hover {
   margin-right: 5px;
 }
 
-.size-select span,
-.color-select span {
+.size-select span {
   padding: 5px;
   margin-right: 10px;
   cursor: pointer;
 }
-
 
 .quantity-select input {
   background: #eee;
@@ -371,16 +380,14 @@ button:hover {
   border-radius: 12px;
 }
 
-#buy{
+#buy {
   background: #553ffa;
   color: #ffffff;
   font-size: 14px;
-  width: 150%;
-  padding: 20px;
-  border-radius: 30px;
-  border: 0;
-  outline: 0;
-  margin-top: 20px; 
+  width: 100px;
+  margin-top: 25px;
+  margin-left: -4px;
+  border-radius: 15px;
   box-shadow: 0 10px 10px rgba(85, 63, 240, 0.25);
   cursor: pointer;
 }
